--- a/src/component/package.json
+++ b/src/component/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/jakehartnell/react-images-upload"
   },
   "dependencies": {
-    "react": "^16.12.0",
+    "react": "^16.3.0 || ^17",
     "react-flip-move": "^3.0.4"
   },
   "scripts": {
@@ -30,14 +30,15 @@
   ],
   "license": "MIT",
   "peerDependencies": {
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "react": "^16.3.0 || ^17",
+    "react-dom": "^16.3.0 || ^17"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1"
   }
 }
